2009-05-15	Richard van den Berg  <richard@vdberg.org>
	* Prelink patch by Peter Vrabec <pvrabec@redhat.com>

2007-12-20	Richard van den Berg  <richard@vdberg.org>
	* Fix equals matches, patch by Brian De Wolf <bldewolf@csupomona.edu>

2007-08-22	Richard van den Berg  <richard@vdberg.org>
	* Turn CR/LF into LF, patch by Steve Conklin <sconklin@redhat.com>

2007-06-05	Richard van den Berg  <richard@vdberg.org>
	* Display complete selinux context, patch by Steve Conklin <sconklin@redhat.com>

2007-05-15	Richard van den Berg  <richard@vdberg.org>
	* Quit autogen.sh if required tools are not found

2007-04-27	Richard van den Berg  <richard@vdberg.org>
	* Only use optional groups in "make check" when enabled
	* Prevent segfaults in db_write_byte_base64, patch from James Antill
	* Fix aide.spec, patch by George Hansper <georgeh@anstat.com.au>

2006-12-19	Richard van den Berg  <richard@vdberg.org>
	* Do not warn about files not being directories

2006-12-15	Richard van den Berg  <richard@vdberg.org>
	* Released version 0.13.1
	* Changed version to post-0.13.1

2006-12-14	Richard van den Berg  <richard@vdberg.org>
	* Use lseek() instead of fseek() on aide.db

2006-12-13	Richard van den Berg  <richard@vdberg.org>
	* Work around for error while reading gzipped aide.db files

2006-12-08	Richard van den Berg  <richard@vdberg.org>
	* Removed ustat dead code

2006-12-07	Richard van den Berg  <richard@vdberg.org>
	* Released version 0.13
	* Changed version to post-0.13

2006-11-30	Richard van den Berg  <richard@vdberg.org>
	* Set meaningful exitcodes when --check is used (Pablo Virolainen)

2006-11-29	Richard van den Berg  <richard@vdberg.org>
	* Changed version to post-0.13-rc2
	* Check for WHIRLPOOL so old mhash can be used (Pablo Virolainen)

2006-11-25	Richard van den Berg  <richard@vdberg.org>
	* Fix error message about HAVAL and CRC32 with --update and gcrypt
	* Fix --with and --without logic of configure
	* Make --without switches of configure work