@@ -69,6 +69,7 @@ extern long conf_lineno;
 
 %token TACLNOSYMLINKFOLLOW
 %token TWARNDEADSYMLINKS
+%token TSUMMARIZECHANGES
 %token TNEWLINE
 %token TVERBOSE
 %token TCONFIG_FILE
@@ -145,7 +146,7 @@ line : rule | equrule | negrule | definestmt | undefstmt
        | ifdefstmt | ifndefstmt | ifhoststmt | ifnhoststmt
        | groupdef | db_in | db_out | db_new | verbose | config_version 
        | report | gzipdbout | recursion_stopper | warn_dead_symlinks
-       | acl_no_symlink_follow | beginconfigstmt | endconfigstmt
+       | summarize_changes | acl_no_symlink_follow | beginconfigstmt | endconfigstmt
        | TEOF {
             newlinelastinconfig=1;
 	    YYACCEPT;
@@ -292,6 +293,14 @@ warn_dead_symlinks : TWARNDEADSYMLINKS TTRUE {
 
 warn_dead_symlinks : TWARNDEADSYMLINKS TFALSE {
   conf->warn_dead_symlinks=0;
+} ;
+
+summarize_changes : TSUMMARIZECHANGES TTRUE {
+  conf->summarize_changes=1;
+} ;
+
+summarize_changes : TSUMMARIZECHANGES TFALSE {
+  conf->summarize_changes=0;
 } ;
 
 gzipdbout : TGZIPDBOUT TTRUE { 
